--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
     <head>
-    <title>Hello world in Git</title>
-    <meta name="description" content = "Hello world in Git"/>
+        <title>Hello world in Git</title>
+        <meta name="description" content = "Hello world in Git"/>
     </head>
     <body>
         <h1>Hello world!</h1>
+        <ul>
+           <li><a href='bio.html'>Biography</a></li>
+        </ul>
     </body>
 </html>
