--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+    <title>Hello world in Git</title>
+    <meta name="description" content = "Hello world in Git"/>
+    </head>
     <body>
         <h1>Hello world!</h1>
     </body>
