--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>Hello world!</h1>
         <ul>
            <li><a href='bio.html'>Biography</a></li>
+           <li>first commit develop</li>
         </ul>
     </body>
 </html>
