second commit develop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <ul>
            <li><a href='bio.html'>Biography</a></li>
            <li>first commit develop</li>
+           <li>second commit develop</li>
         </ul>
     </body>
 </html>
