third commit develop

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
            <li><a href='bio.html'>Biography</a></li>
            <li>first commit develop</li>
            <li>second commit develop</li>
+           <li>third commit develop</li>
         </ul>
     </body>
 </html>
