--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
            <li>second commit develop</li>
            <li>third commit develo  p</li>
            <li>first commit feature x</li>
+           <li>first commit release 0.1.0</li>
         </ul>
     </body>
 </html>
