first commit on feature b

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
            <li>first commit feature x</li>
            <li>first commit release 0.1.0</li>
         </ul>
+        <ul>
+          <li>first commit on feature b</li>
+        </ul>
     </body>
 </html>
