first commit on feature c

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </ul>
         <ul>
           <li>first commit on feature b</li>
+          <li>first commit on feature c</li>
         </ul>
     </body>
 </html>
