fix bug on release 0.2.0

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
           <li>first commit on feature b</li>
           <li>first commit on feature c</li>
+          <li>fix bug on release 0.2.0</li>
         </ul>
     </body>
 </html>
