first commit on feature c

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li>first commit on feature b</li>
           <li>first commit on feature c</li>
           <li>fix bug on release 0.2.0</li>
+          <li>first commit on feature c</li>
         </ul>
     </body>
 </html>
